--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vue Hello World</title>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+</head>
+<body>
+<div id="app">
+  <p>{{ message }}</p>
+</div>
+
+<script type="module">
+  const apiUrl = import.meta.env.VITE_API_URL; // 개발 phase 별 환경 설정 관리
+  console.log('API URL:', apiUrl);
+
+  new Vue({
+    el: '#app',
+    data: {
+      message: ''
+    },
+    methods: {
+      fetchHello() {
+        axios.get(`${apiUrl}/hello`)
+        .then(response => {
+          this.message = response.data.content;
+        })
+        .catch(error => {
+          console.error("There was an error!", error);
+          this.message = "Error: " + error.message;
+        });
+      }
+    },
+    mounted() {
+      this.fetchHello();
+    }
+  });
+</script>
+</body>
 </html>
